--- a/deepseek_html_20250806_24a6e1.html
+++ b/deepseek_html_20250806_24a6e1.html
@@ -54,7 +54,7 @@
         <!-- B站视频嵌入 -->
         <div class="video-container">
             <iframe 
-                src="//player.bilibili.com/player.html?bvid=BV18jtczBEbD&high_quality=1&autoplay=0" 
+                src="//player.bilibili.com/player.html?bvid=BV1km4ZzSEgQ&high_quality=1&autoplay=0" 
                 allowfullscreen>
             </iframe>
         </div>
