--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>扫码观看B站视频</title>
+    <title>武药制药进厂安全宣传视频</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -47,10 +47,7 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>请扫码观看视频</h1>
-        <p>使用手机扫描二维码即可直接播放</p>
-        
+    <div class="container"> 
         <!-- B站视频嵌入 -->
         <div class="video-container">
             <iframe 
@@ -60,7 +57,7 @@
         </div>
 
         <div class="footer">
-            <p>视频来源：哔哩哔哩 (Bilibili)</p>
+            <p> (Bilibili)</p>
         </div>
     </div>
 </body>
