--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>武药制药进厂安全宣传视频</title>
+    <title>武药制药进厂人员进厂视频</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -22,6 +22,7 @@
         }
         h1 {
             color: #FB7299; /* B站粉色 */
+            margin-bottom: 20px;
         }
         .video-container {
             position: relative;
@@ -47,17 +48,19 @@
     </style>
 </head>
 <body>
-    <div class="container"> 
+    <div class="container">
+        <h1>武药制药进厂人员培训视频</h1>
+        
         <!-- B站视频嵌入 -->
         <div class="video-container">
             <iframe 
-                src="//player.bilibili.com/player.html?bvid=BV1km4ZzSEgQ&high_quality=1&autoplay=0" 
+                src="//player.bilibili.com/player.html?bvid=BV18jtczBEbD&high_quality=1&autoplay=0" 
                 allowfullscreen>
             </iframe>
         </div>
 
         <div class="footer">
-            <p> (Bilibili)</p>
+            <p>企业培训资料 | 武药制药版权所有</p>
         </div>
     </div>
 </body>
